<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ntenisot.example.androidservicesample.MainActivity$PlaceholderFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/textStatus"
            android:textSize="24sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_status" />

        <TextView
            android:id="@+id/textIntValue"
            android:textSize="24sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_integet_value" />

        <TextView
            android:id="@+id/textStrValue"
            android:textSize="24sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_string_value" />

        <RelativeLayout
            android:id="@+id/RelativeLayout03"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom">

            <Button
                android:id="@+id/btnUpby1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_increment_by_one"/>

            <Button
                android:id="@+id/btnUpby10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_increment_by_10"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
